--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "yarn lint && next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "5.59.16",
     "axios": "1.7.7",
     "chart.js": "4.4.6",
+    "formik": "^2.4.6",
     "install": "^0.13.0",
     "lodash.debounce": "4.0.8",
     "next": "15.0.1",
