--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "5.3.0",
     "swiper": "^11.2.2",
     "tailwindcss": "3.4.1",
+    "yup": "^1.6.1",
     "zustand": "5.0.0"
   },
   "devDependencies": {
