--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.4.6",
     "install": "^0.13.0",
     "lodash.debounce": "4.0.8",
+    "lucide-react": "^0.510.0",
     "next": "15.0.1",
     "postcss": "8",
     "react": "19.0.0-rc-69d4b800-20241021",
