--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-hook-form": "^7.54.2",
     "react-icons": "5.3.0",
+    "recharts": "^2.15.3",
     "swiper": "^11.2.2",
     "tailwindcss": "3.4.1",
     "yup": "^1.6.1",
