--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "1.7.7",
     "chart.js": "4.4.6",
     "formik": "^2.4.6",
+    "framer-motion": "^12.12.1",
     "install": "^0.13.0",
     "lodash.debounce": "4.0.8",
     "lucide-react": "^0.510.0",
