--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "1.7.7",
     "chart.js": "4.4.6",
     "formik": "^2.4.6",
+    "framer-motion": "^12.11.4",
     "install": "^0.13.0",
     "lodash.debounce": "4.0.8",
     "lucide-react": "^0.510.0",
@@ -21,6 +22,7 @@
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-chartjs-2": "5.2.0",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-icons": "5.3.0",
     "swiper": "^11.2.2",
