feat: create staff management page
- Create staff management page
- Add staff list table

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
   "cSpell.words": [
     "aliquam",
-    "next-frontend-basic-folder-structure",
-    "commodo"
+    "assignedtask",
+    "commodo",
+    "next-frontend-basic-folder-structure"
   ]
 }
