--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "yarn lint && next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -24,6 +24,7 @@
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "5.3.0",
     "recharts": "^2.15.3",
     "swiper": "^11.2.2",
