fix: add script in package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "yarn lint && next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "npm install && npm run build && npm run pm2:start"
   },
   "dependencies": {
     "@tanstack/react-query": "5.59.16",
