fix: add script in package.json

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "npm install && npm run build && npm run pm2:start"
+    "deploy": "npm run build && npm run pm2:start"
   },
   "dependencies": {
     "@tanstack/react-query": "5.59.16",
