--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-frontend-basic-folder-structure",
+  "name": "satkar-web-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
