--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "yarn lint && next dev --turbopack",
     "build": "next build",
-    "start": " PORT=3001 && next start",
+    "start": " PORT=3001 next start",
     "lint": "next lint"
   },
   "dependencies": {
