--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "5.3.0",
+    "react-phone-input-2": "^2.15.1",
     "recharts": "^2.15.3",
     "swiper": "^11.2.2",
     "tailwindcss": "3.4.1",
