--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "5.59.16",
     "axios": "1.7.7",
     "chart.js": "4.4.6",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.12.1",
     "install": "^0.13.0",
