--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "recharts": "^2.15.3",
     "swiper": "^11.2.2",
     "tailwindcss": "3.4.1",
+    "uuid": "^11.1.0",
     "yup": "^1.6.1",
     "zustand": "5.0.0"
   },
