--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "5.3.0",
     "react-phone-input-2": "^2.15.1",
+    "react-tagsinput": "^3.20.3",
     "recharts": "^3.1.0",
     "swiper": "^11.2.2",
     "tailwindcss": "3.4.1",
@@ -46,6 +47,7 @@
     "@types/node": "22.15.19",
     "@types/react": "19.1.4",
     "@types/react-dom": "18",
+    "@types/react-tagsinput": "^3.20.6",
     "eslint": "8",
     "eslint-config-next": "15.0.1",
     "typescript": "5"
