--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "lucide-react": "^0.510.0",
     "next": "^15.1.9",
     "postcss": "8",
-    "react": "19.0.0-rc-69d4b800-20241021",
+    "react": "19.0.3",
     "react-chartjs-2": "5.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "19.0.3",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
